[build-system]
requires = ["setuptools>=61.0", "wheel", "torch", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "flashinfer-aot-modules"
dynamic = ["version"]
description = "Pre-compiled AOT modules for FlashInfer"
readme = {text = "This package contains pre-compiled AOT modules for FlashInfer. It provides all necessary compiled shared libraries (.so files) for optimized inference operations.", content-type = "text/plain"}
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "FlashInfer team"},
]
maintainers = [
    {name = "FlashInfer team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/flashinfer-ai/flashinfer"
Documentation = "https://github.com/flashinfer-ai/flashinfer"
Repository = "https://github.com/flashinfer-ai/flashinfer"
"Issue Tracker" = "https://github.com/flashinfer-ai/flashinfer/issues"

[tool.setuptools]
packages = ["flashinfer_aot_modules"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "flashinfer_aot_modules.__version__"}

[tool.setuptools.package-data]
flashinfer_aot_modules = ["aot_modules/**/*.so"]

[tool.setuptools.cmdclass]
build_py = "setup.CompileAndBuildPy"
sdist = "setup.CustomSdist"
